# itsnp-workshop-scripts

./: .env.example  README.md  email_sender.py  example_names.csv  imagegen.py  pyproject.toml
